fixed text overflow problem

--- a/src/main/ui/src/styles.css
+++ b/src/main/ui/src/styles.css
@@ -102,6 +102,7 @@ app-team-detail, app-team-change-members {
   width: 50%;
   text-align: center;
   padding: 20px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 500px) {
